<resources>
    <string name="app_name">WholSum</string>
    <string name="welcome">Welcome to WhOlSum</string>
    <string name="app_info">App Information</string>
    <string name="additional_info">Additional Information</string>
    <string name="logo">Logo</string>
    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="submit">Submit</string>
    <string name="your_web_client_id">"969078698525-nuihp645u9gb5shr5tavr4j7sh35u4pa.apps.googleusercontent.com"</string>
    <string name="desc_firebase_lockup">firebase lockup</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
</resources>